# lamadre_django

./: .gitignore  CLOUDFLARE-SETUP.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SSH-SETUP.md  celery.py  check-server.sh  deploy-wordpress-django.sh  deploy.sh  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
lamadre_django/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
shop/: apps.py  urls.py  views.py
templates/: base.html
templates/shop/: about.html  contact.html  home.html
