
[tool.poetry]
name = "lamadre-django"
version = "0.1.0"
description = "E-commerce platform built with Django Oscar"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Django 4.2 - Oscar compatibility
Django = "~4.2.0"
# Force compatible factory-boy version BEFORE django-oscar
factory-boy = "~3.2.0"
# Core Oscar dependencies
django-oscar = "^3.2"
pillow = "^10.0"
# Database
psycopg2-binary = "^2.9"
# WSGI server
gunicorn = "^21.2"
# Environment variables
django-environ = "^0.11"
# Static files serving
whitenoise = "^6.5"

[tool.poetry.group.dev.dependencies]
# Minimal dev dependencies to avoid conflicts
black = "^23.7"
django-debug-toolbar = "^4.2"

[tool.poetry.group.test.dependencies]
# Let django-oscar provide testing dependencies
pytest = "^7.4"
pytest-django = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"